<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main -->
    <string name="app_name">Murcs</string>

    <!-- Activity Titles -->
    <string name="title_activity_main">Murcs</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_projectList">Projects</string>
    <string name="title_activity_project_edit">Edit project</string>
    <string name="title_activity_project_edit_new">New project</string>
    <string name="title_activity_backlog">Backlog</string>
    <string name="title_activity_task_overview">Task overview</string>
    <string name="title_activity_task_edit">Edit task</string>
    <string name="title_activity_task_edit_new">New task</string>
    <string name="title_activity_issue_overview">Issue overview</string>
    <string name="title_activity_issue_edit">Edit issue</string>
    <string name="title_activity_issue_edit_new">New issue</string>
    <string name="title_activity_sprint_list">Sprint list</string>
    <string name="title_activity_sprint_edit">Edit sprint</string>
    <string name="title_activity_sprint_edit_new">New sprint</string>
    <string name="title_activity_sprint_overview">Sprint</string>
    <string name="title_activity_user_list">User list</string>
    <string name="title_activity_project_player_list">Player list</string>
    <string name="title_activity_profile_overview">Profile overview</string>
    <string name="title_activity_profile_edit">Edit profile</string>
    <string name="title_activity_player_add">Add player</string>

    <!-- Buttons -->
    <string name="button_backlog_show">Backlog</string>
    <string name="button_players_show">Players</string>
    <string name="button_sprints_show">Sprints</string>
    <string name="button_login">Join the community</string>
    <string name="button_add_task">add task</string>
    <string name="sprint_pick_date_button">Pick a date</string>
    <string name="create_sprint_button">Create a new Sprint</string>
    <string name="button_dashboard_project_list">See all projects</string>
    <string name="button_dashboard_my_profile">My profile</string>
    <string name="button_dashboard_edit_my_profile">Edit my profile</string>
    <string name="button_edit">edit</string>
    <string name="button_save">save</string>
    <string name="phone_contact_button">Browse contacts</string>
    
    <!-- Labels -->
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="company">Company name</string>
    <string name="jobtitle">Job title</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="estimation">Estimation</string>
    <string name="invited">Invited</string>
    <string name="admin">Admin</string>

    <!-- Hints -->
    <string name="project_title_edit_hint">Project title</string>
    <string name="project_description_edit_hint">Please enter a project description</string>
    <string name="task_name_edit_hint">Task name</string>
    <string name="task_description_edit_hint">Please enter a task description</string>
    <string name="issue_edit_name_hint">Issue name</string>
    <string name="issue_edit_description_hint">Issue description</string>
    <string name="issue_edit_estimation_hint">Estimation</string>
    <string name ="player_name_add_hint">Email address</string>

    <!-- Menu actions -->
    <string name="action_add">Add</string>
    <string name="action_overflow">More</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_markDoneUndone">Mark as done/undone</string>
    <string name="action_show_profile">My Profile</string>
    <string name="action_player_edit_role">Set Role</string>
    <string name="action_player_set_admin">Set Admin</string>

    <!-- Error messages -->
    <string name="error_field_required">This field is required</string>
    <string name="error_name_too_long">This field can not exceed 50 caracters</string>
    <string name="error_estimation_too_big">The estimation can not exceed 100 hours</string>
    <string name="error_email_not_valid">The email is not valid</string>

    <!-- Formats -->
    <string name="format_date">dd MMM yyyy</string>

    <!-- Others -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="project_default_unit">hours</string>
    <string name="project_single_unit">hour</string>
    <string name="sprint_name_edit_hint">Sprint Name</string>
    <string name="sprint_date">Date</string>
    <string name="sprint_date_description">Sprint deadline:</string>
    <string name="no_date_selected">No date selected</string>
    <string name="sprint_row_name">Sprint name</string>
    <string name="sprint_row_date">dd/mm/yyyy</string>
    <string name="sprint_overview_default_name">Sprint name</string>
    <string name="sprint_overview_default_deadline">deadline</string>
    <string name="no_player">No player assigned</string>
    <string name="no_sprint">No sprint assigned</string>
    <string name="user_avatar_description">User avatar</string>
    <string name="project_image_description">Project image</string>
    <string name="sprints_button_description">Sprints button</string>
    <string name="players_button_description">Players button</string>
    <string name="backlog_button_description">Backlog button</string>
    <string name="empty_backlog_hint">There are no Tasks for this Project</string>
    <string name="empty_project_list_hint">There are no projects for this user</string>
    <string name="empty_issue_list_hint">There are no issues for this task</string>
    <string name="empty_sprint_list_hint">There are no sprints for this project</string>
    <string name="sprint_overview_issue_add">Add an issue</string>
    <string name="issue_description_label">Description</string>
    <string name="issue_assignee_label">Assignee</string>
    <string name="issue_name_label">Name</string>
    <string name="issue_estimation_label">Estimation</string>
    <string name="issue_edit_assignee">Assignee</string>
    <string name="issue_edit_sprint">Sprint</string>
    <string name="task_description_label">Description</string>
    <string name="project_description_label">Description</string>

    <!-- String Arrays -->
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Undefined</item>
    </string-array>

</resources>
