<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Cyriaque Brousse -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.epfl.scrumtool.gui.IssueEditActivity"
    android:padding="@dimen/space" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/issue_name_label"
        android:textStyle="bold" />
    
    <EditText
        android:id="@+id/issue_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:layout_marginBottom="@dimen/space"
        android:padding="@dimen/space"
        android:maxLines="1"
        android:hint="@string/issue_edit_name_hint" >

        <requestFocus />
    </EditText>

    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/issue_description_label"
        android:textStyle="bold" />
    
    <EditText
        android:id="@+id/issue_description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:background="@color/White"
        android:layout_marginBottom="@dimen/space"
        android:padding="@dimen/space"
        android:hint="@string/issue_edit_description_hint" />

    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/issue_estimation_label"
        android:textStyle="bold" />
    
    <EditText
        android:id="@+id/issue_estimation_edit"
        android:background="@color/White"
        android:layout_marginBottom="@dimen/space"
        android:padding="@dimen/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:hint="@string/issue_edit_estimation_hint" />
    
    <TextView
        android:id="@+id/issue_assignee_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/issue_edit_assignee" />
    
    <Spinner
        android:id="@+id/issue_assignee_spinner"
        android:background="@color/White"
        android:layout_marginBottom="@dimen/space"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/issue_sprint_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/issue_edit_sprint" />
    
    <Spinner
        android:id="@+id/issue_sprint_spinner"
        android:background="@color/White"
        android:layout_marginBottom="@dimen/space"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    

</LinearLayout>
