<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Cyriaque Brousse -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space"
    tools:context="ch.epfl.scrumtool.gui.ProjectEditActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- Project icon -->

        <ImageView
            android:id="@+id/project_icon"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@color/Gray"
            android:contentDescription="@string/project_image_description"
            android:scaleType="fitXY"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="@dimen/space"
            android:src="@drawable/default_project" />

        <!-- Project title textedit -->

        <EditText
            android:id="@+id/project_title_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White"
            android:padding="@dimen/space"
            android:hint="@string/project_title_edit_hint"
            android:maxLines="2" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <!-- Project description textedit -->

    <TextView
        android:layout_marginTop="@dimen/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/project_description_label"
        android:textStyle="bold" />
    
    <EditText
        android:id="@+id/project_description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:padding="@dimen/space"
        android:hint="@string/project_description_edit_hint"
        android:inputType="textMultiLine" />

</LinearLayout>