<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Cyriaque Brousse -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space"
    tools:context="ch.epfl.scrumtool.gui.MainTaskEditActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- Priority -->

        <ch.epfl.scrumtool.gui.components.widgets.PrioritySticker
            android:id="@+id/task_priority_edit"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/space"
            android:layout_marginStart="0dp" />

        <!-- Task name -->

        <EditText
            android:id="@+id/task_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:padding="@dimen/space"
            android:hint="@string/task_name_edit_hint"
            android:maxLines="2" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <!-- Task description -->

    <TextView
        android:layout_marginTop="@dimen/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/task_description_label"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/task_description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:padding="@dimen/space"
        android:hint="@string/task_description_edit_hint"
        android:inputType="textMultiLine" />

</LinearLayout>