<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Loris Leiva -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.epfl.scrumtool.gui.ProjectOverviewActivity" >

    <!-- Project icon -->
    <TextView
        android:id="@+id/project_icon"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/space"
        android:background="@color/whitesmoke" />

    <!-- Project Title -->
    <TextView
        android:id="@+id/project_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/project_icon"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/project_icon"
        android:layout_marginEnd="@dimen/space"
        android:layout_toEndOf="@id/project_icon"
        android:maxLines="1"
        android:text="Project Title"
        android:textSize="@dimen/header_title_size"
        android:textStyle="bold" />

    <!-- Project Description -->
    <TextView
        android:id="@+id/project_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_icon"
        android:layout_margin="@dimen/space"
        android:text="Project Description"
        android:textSize="@dimen/header_description_size" />

    <!-- Go to Backlog -->
    <Button
        android:id="@+id/project_button_backlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_description"
        android:layout_marginBottom="@dimen/small_space"
        android:background="@drawable/fluid_button"
        android:onClick="openBacklog"
        android:text="@string/button_backlog_show" />

    <!-- Go to Players -->
    <Button
        android:id="@+id/project_button_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_space"
        android:layout_below="@id/project_button_backlog"
        android:background="@drawable/fluid_button"
        android:text="@string/button_players_show" />

    <!-- Go to Sprints -->
    <Button
        android:id="@+id/project_button_sprints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_button_players"
        android:layout_marginBottom="@dimen/small_space"
        android:background="@drawable/fluid_button"
        android:text="@string/button_sprints_show" />

</RelativeLayout>