<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space"
    android:background="@color/shadeB"
    tools:context="ch.epfl.scrumtool.gui.DashboardActivity" >

    <ListView
        android:id="@+id/dashboard_issue_summary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginBottom="@dimen/space"
        android:background="@color/White"
        android:gravity="center"
        android:text="issues summary" />
    
    <TextView android:id="@+id/dashboard_issue_summary_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_marginBottom="@dimen/space"
        android:background="@color/White"
        android:gravity="center"
        android:text="No issues" />

    <GridView
        android:id="@+id/dashboard_project_summary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/space"
        android:layout_weight="0.4"
        android:gravity="center"
        android:horizontalSpacing="@dimen/space"
        android:numColumns="2"
        android:text="project summary" />
    
    <LinearLayout
        android:id="@+id/dashboard_project_summary_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/space"
        android:layout_weight="0.4"
        android:background="@color/White"
        android:gravity="center"
        android:onClick="openAddProject"
        android:orientation="vertical"
        android:text="project summary" >

        <ImageView
            android:id="@+id/dashboard_project_summary_add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_add"
            android:gravity="center"
            android:src="@drawable/ic_action_new" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Add a project" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- Go to Project List -->
        <Button
            android:id="@+id/dashboard_button_project_list"
            style="@style/fluid_button"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginEnd="@dimen/space"
            android:onClick="openProjectList"
            android:text="@string/button_dashboard_project_list" />

        <!-- Go to My Profile -->
        <Button
            android:id="@+id/dashboard_button_my_profile"
            style="@style/fluid_button"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:onClick="openMyProfile"
            android:text="@string/button_dashboard_my_profile" />
    </LinearLayout>

</LinearLayout>