<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Cyriaque Brousse -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    style="@style/spaced_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".gui.IssueOverviewActivity" >

    <!-- Issue name -->

    <TextView
        android:id="@+id/issue_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space"
        android:background="@color/White"
        android:maxLines="1"
        android:padding="@dimen/small_space"
        android:textSize="@dimen/header_title_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space"
        android:background="@color/White"
        android:orientation="horizontal" >

        <!-- Duration estimation stamp -->

        <ch.epfl.scrumtool.gui.components.widgets.Stamp
            android:id="@+id/issue_estimation_stamp"
            android:layout_width="@dimen/stamp_width"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/space"
            android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_horizontal"
            android:orientation="vertical"
            android:showDividers="middle" >

            <!-- Status -->

            <TextView
                android:id="@+id/issue_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/space"
                android:textColor="@color/Black" />

            <!-- Sprint -->

            <TextView
                android:id="@+id/issue_sprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/space"
                android:textColor="@color/Black" />
        </LinearLayout>
    </LinearLayout>

    <!-- Label "assignee" -->

    <TextView
        android:id="@+id/issue_assignee_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/issue_assignee_label"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space"
        android:background="@color/White"
        android:orientation="horizontal"
        android:padding="@dimen/small_space" >

        <!-- Assignee profile picture -->

        <ImageView
            android:id="@+id/issue_assignee_picture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/user_avatar_description"
            android:scaleType="fitXY"
            android:src="@drawable/default_avatar" />

        <!-- Assignee name (link to assignee profile) -->

        <TextView
            android:id="@+id/issue_assignee_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/space"
            android:maxLines="1"
            android:textColor="@color/blue" />
    </LinearLayout>

    <!-- Issue description -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/issue_desc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/issue_description_label"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/issue_desc_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White"
            android:padding="@dimen/space" >

            <TextView
                android:id="@+id/issue_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>

</LinearLayout>